--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,397 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.div-home-principal {
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  background-color: #F0F2F5;
+  min-height: 100vh;
+  height: 100vh;
+  width: 100%;
+  padding-bottom: 20px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+.navbar {
+  width: 100%;
+  height: 60px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.div-navbar-principal {
+  flex-direction: column;
+  width: 100%;
+  background-color: white;
+  padding: 10px;
+}
+
+.div-navbar-principal {
+  height: 57px;
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.div-input-pesquisa {
+  width: 530px;
+  margin-left: 20px;
+  position: relative;
+  display: inline-block;
+
+}
+
+.input-pesquisa {
+  width: 100%;
+  justify-content: space-between;
+  text-align: start;
+  border-radius: 3px;
+  border: 2px solid #D9D9D9;
+  height: 28px;
+}
+
+.icone-pesquisa {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #9E9E9E;
+  font-size: 18px;
+  pointer-events: none;
+}
+
+.icone-close {
+  width: 22px;
+  height: 22px;
+  position: fixed;
+  right: 20px;
+}
+
+
+.div-criar-nota {
+  width: 100%;
+  background-color: transparent;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-top: 30px;
+}
+
+
+
+
+.div-criar-nova {
+  width: 530px;
+  height: cover;
+  border: 2px solid #D9D9D9;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.div-titulo {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: cover;
+  align-items: center;
+  justify-content: space-around;
+  padding: 5px;
+}
+
+
+.input-criar-1 {
+  height: 30px;
+  width: 90%;
+  text-align: start;
+  font-size: 17px;
+  font-weight: bold;
+  border: none;
+
+}
+
+.button-star {
+  border: none;
+  background-color: transparent;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding-right: 10px;
+}
+
+.star-checkbox input {
+  appearance: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.star {
+  width: 20px;
+  height: 20px;
+  transition: color 0.2s;
+}
+
+.filled {
+  color: gold;
+}
+
+
+
+.input-criar-2 {
+  margin-top: 5px;
+  text-align: start;
+  height: cover;
+  width: 100%;
+  height: 60px;
+  font-size: 14px;
+  border: none;
+}
+
+
+.div-nova-nota {
+  border-top: 1px solid gray;
+  display: flex;
+  height: cover;
+  align-items: center;
+  padding: 10px;
+}
+
+
+
+
+
+
+.div-favoritos-home {
+  width: 100%;
+  background-color: transparent;
+  margin-top: 10px;
+
+}
+
+
+.div-favoritos {
+  width: 100%;
+  flex-direction: column;
+  gap: 10px 10px;
+}
+
+
+.notas-favoritas {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  max-width: 100%;
+  justify-content: start;
+  padding: 20px;
+}
+
+
+/* .div-card-fav {
+  flex: 1 1 calc(25% - 20px);
+  max-width: calc(25% - 20px);
+  background-color: #fff;
+  border-radius: 8px;
+  height: 250px;
+  border-radius: 30px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+}
+ */
+.div-card-fav {
+  flex: 1 1 calc(25% - 20px);
+  max-width: calc(25% - 20px);
+  background-color: #fff;
+  border-radius: 30px;
+  height: 250px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  transition: background-color 0.3s ease;
+}
+
+.div-child-1 {
+  height: 20%;
+  padding: 2px 10px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+
+.div-child-2 {
+  height: 60%;
+  padding: 2px 10px;
+}
+
+.div-child-3 {
+  height: 20%;
+  padding: 2px 10px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+}
+
+.primeiros-icones {
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+
+}
+
+
+.label-fav {
+  margin-left: 30px;
+}
+
+
+.icones-rodape-notas {
+  width: 23px;
+  height: 23px;
+  transition: color 0.2s;
+  color: #51646E;
+}
+
+.icone-close-fav {
+  width: 23px;
+  height: 23px;
+  transition: color 0.2s;
+  color: #51646E;
+}
+
+
+.icones-rodape-notas:hover {
+  transform: scale(1.15);
+}
+
+.icone-close-fav:hover {
+  transform: scale(1.15);
+}
+
+.texto-quebra {
+  word-wrap: break-word;
+  /* Permite que palavras longas quebrem para a linha seguinte */
+  overflow-wrap: break-word;
+  /* Alternativa moderna para compatibilidade */
+  white-space: normal;
+  /* Garante que o texto possa quebrar em múltiplas linhas */
+}
+
+
+.div-cores{
+  background-color: #fff;
+  border: 1px solid #bac4c9;
+  border-radius: 8px;
+  padding: 10px;
+  height: cover;
+  width:auto;
+}
+
+.cores-container {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  margin: 5px 0;
+  height: cover;
+}
+
+.cor-item {
+  width: 70px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.cor-item:hover {
+  transform: scale(1.2);
+}
+
+.draggable{
+  height: cover;
+  min-height: 100vh;
+  position: relative;
+}
+
+
+
+
+
+
+@media screen and (max-width: 760px) {
+  .div-input-pesquisa {
+    width: 230px;
+    margin-left: 20px;
+    position: relative;
+    display: inline-block;
+    margin-left: 5px;
   }
+
+  .Logo-navbar {
+    width: 24px;
+    height: 20px;
+  }
+
+  .label-logo {
+    font-size: 15px;
+  }
+
+  .icone-close {
+    right: 10;
+  }
+
+
+  .div-criar-nova {
+    width: 400px;
+    height: cover;
+    border-radius: 25px;
+  }
+
+
+  .div-card-fav {
+    flex: 1 1 100%;
+    max-width: 100%;
+    height: 150px;
+  }
+
+
+  .div-card-fav {
+
+    height: 300px;
+  }
+
+  .div-child-1 {
+    height: 20%;
+    padding: 1px 10px;
+  }
+  
+  .div-child-2 {
+    height: 50%;
+
+    margin-top: 10px;
+  }
+  
+  .div-child-3 {
+    height: 20%;
+    margin-top: 10px;
+  }
+  
+
+
+
+
 }
