--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,7 +178,7 @@ body {
 
 .div-favoritos-home {
   width: 100%;
-  background-color: transparent;
+  background-color: #F0F2F5;
   margin-top: 10px;
 
 }
