--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,7 +119,11 @@ body {
   font-size: 17px;
   font-weight: bold;
   border: none;
+  background-color: transparent;
+}
 
+.input-criar-1 :focus{
+border: 0px;
 }
 
 .button-star {
@@ -160,6 +164,19 @@ body {
   height: 60px;
   font-size: 14px;
   border: none;
+  background-color: transparent;
+}
+
+
+.input-criar-3 {
+  margin-top: 5px;
+  text-align: start;
+  height: cover;
+  width: 100%;
+  height: 150px;
+  font-size: 14px;
+  border: none;
+  background-color: transparent;
 }
 
 
@@ -232,8 +249,8 @@ body {
 }
  */
 .div-card-fav {
-  flex: 1 1 calc(25% - 20px);
-  max-width: calc(25% - 20px);
+  flex: 1 1 calc(20% - 20px);
+  max-width: calc(20% - 20px);
   background-color: #fff;
   border-radius: 30px;
   height: 250px;
